Everything working, few minor details to iron out