@@ -4,16 +4,19 @@ import java.util.List;
 import java.util.function.Predicate;
 
 /**
- * This record represents the decks of tiles in the game.
- * It contains a list of start tiles, normal tiles, and menhir tiles.
+ * This class represents a collection of decks of tiles in the game.
+ * Each deck is categorized by the kind of tile it contains.
  * @author Bjork Pedersen (376143)
  */
 public record TileDecks(List<Tile> startTiles, List<Tile> normalTiles, List<Tile> menhirTiles) {
 
-
     /**
-     * Constructor for the TileDecks record.
-     * Makes a copy of the provided lists of tiles.
+     * Constructor for TileDecks.
+     * It initializes the decks with the provided lists of tiles.
+     *
+     * @param startTiles List of start tiles.
+     * @param normalTiles List of normal tiles.
+     * @param menhirTiles List of menhir tiles.
      */
     public TileDecks {
         startTiles = List.copyOf(startTiles);
@@ -22,115 +25,87 @@ public record TileDecks(List<Tile> startTiles, List<Tile> normalTiles, List<Tile
     }
 
     /**
-     * Returns the size of the deck of the given kind of tile.
+     * Returns the size of the specified deck.
      *
-     * @param kind the kind of tile
-     * @return the size of the deck
+     * @param kind The kind of the deck.
+     * @return The size of the deck.
      */
     public int deckSize(Tile.Kind kind) {
-        return switch (kind) {
-            case START -> startTiles.size();
-            case NORMAL -> normalTiles.size();
-            case MENHIR -> menhirTiles.size();
-        };
+        return getDeck(kind).size();
     }
 
     /**
-     * Returns the top tile of the deck of the given kind of tile.
+     * Returns the top tile of the specified deck.
      *
-     * @param kind the kind of tile
-     * @return the top tile of the deck
+     * @param kind The kind of the deck.
+     * @return The top tile of the deck, or null if the deck is empty.
      */
     public Tile topTile(Tile.Kind kind) {
-        return switch (kind) {
-            case START -> {
-                if (startTiles.isEmpty()) {
-                    yield null;
-                }
-                yield startTiles.getFirst();
-            }
-            case NORMAL -> {
-                if (normalTiles.isEmpty()) {
-                    yield null;
-                }
-                yield normalTiles.getFirst();
-            }
-            case MENHIR -> {
-                if (menhirTiles.isEmpty()) {
-                    yield null;
-                }
-                yield menhirTiles.getFirst();
-            }
-        };
+        List<Tile> deck = getDeck(kind);
+        return deck.isEmpty() ? null : deck.get(0);
     }
 
     /**
-     * Returns a new TileDecks with the top tile of the given kind of tile drawn.
+     * Returns a new TileDecks instance with the top tile drawn from the specified deck.
      *
-     * @param kind the kind of tile
-     * @return a new TileDecks with the top tile drawn
+     * @param kind The kind of the deck.
+     * @return A new TileDecks instance with the top tile drawn.
+     * @throws IllegalArgumentException If the deck is empty.
      */
     public TileDecks withTopTileDrawn(Tile.Kind kind) {
+        List<Tile> deck = getDeck(kind);
+        Preconditions.checkArgument(!deck.isEmpty());
+        List<Tile> newDeck = deck.subList(1, deck.size());
+        return updateDeck(kind, newDeck);
+    }
+
+    /**
+     * Returns a new TileDecks instance with the top tile drawn from the specified deck until a condition is met.
+     *
+     * @param kind The kind of the deck.
+     * @param predicate The condition to stop drawing tiles.
+     * @return A new TileDecks instance with the top tiles drawn until the condition is met.
+     */
+    public TileDecks withTopTileDrawnUntil(Tile.Kind kind, Predicate<Tile> predicate) {
+        TileDecks trimmedTileDeck = this;
+        List<Tile> deck = getDeck(kind);
+        for (Tile tile : deck) {
+            if (!predicate.test(tile) && !trimmedTileDeck.getDeck(kind).isEmpty()) {
+                trimmedTileDeck = trimmedTileDeck.withTopTileDrawn(kind);
+            }
+            if (predicate.test(tile)) {
+                break;
+            }
+        }
+        return trimmedTileDeck;
+    }
+
+    /**
+     * Returns the deck of the specified kind.
+     *
+     * @param kind The kind of the deck.
+     * @return The deck of the specified kind.
+     */
+    private List<Tile> getDeck(Tile.Kind kind) {
         return switch (kind) {
-            case START -> {
-                Preconditions.checkArgument(!startTiles.isEmpty());
-                List<Tile> newStart = startTiles.subList(1, startTiles.size());
-                yield new TileDecks(newStart, normalTiles, menhirTiles);
-            }
-            case NORMAL -> {
-                Preconditions.checkArgument(!normalTiles.isEmpty());
-                List<Tile> newNormal = normalTiles.subList(1, normalTiles.size());
-                yield new TileDecks(startTiles, newNormal, menhirTiles);
-            }
-            case MENHIR -> {
-                Preconditions.checkArgument(!menhirTiles.isEmpty());
-                List<Tile> newMenhir = menhirTiles.subList(1, menhirTiles.size());
-                yield new TileDecks(startTiles, normalTiles, newMenhir);
-            }
+            case START -> startTiles;
+            case NORMAL -> normalTiles;
+            case MENHIR -> menhirTiles;
         };
     }
 
     /**
-     * Returns a new TileDecks with the top tile of the given kind of tile drawn until a tile that satisfies the given predicate is found.
+     * Returns a new TileDecks instance with the specified deck updated.
      *
-     * @param kind the kind of tile
-     * @param predicate the predicate to test the tiles against
-     * @return a new TileDecks with the top tile drawn until a tile that satisfies the given predicate is found
+     * @param kind The kind of the deck.
+     * @param newDeck The new deck to replace the old one.
+     * @return A new TileDecks instance with the updated deck.
      */
-    public TileDecks withTopTileDrawnUntil(Tile.Kind kind, Predicate<Tile> predicate) {
-        TileDecks trimmedTileDeck = new TileDecks(startTiles, normalTiles, menhirTiles);
-        switch (kind) {
-            case START:
-                for (Tile tile : startTiles) {
-                    while (!predicate.test(tile) && trimmedTileDeck.startTiles.size() > 0) {
-                        trimmedTileDeck = trimmedTileDeck.withTopTileDrawn(Tile.Kind.START);
-                    }
-                    if (predicate.test(tile)) {
-                        break;
-                    }
-                }
-                break;
-            case NORMAL:
-                for (Tile tile: normalTiles) {
-                    while (!predicate.test(tile) && trimmedTileDeck.normalTiles.size() > 0) {
-                        trimmedTileDeck = trimmedTileDeck.withTopTileDrawn(Tile.Kind.NORMAL);
-                    }
-                    if (predicate.test(tile)) {
-                        break;
-                    }
-                }
-                break;
-            case MENHIR:
-                for (Tile tile : menhirTiles) {
-                    while (!predicate.test(tile) && trimmedTileDeck.menhirTiles.size() > 0) {
-                        trimmedTileDeck = trimmedTileDeck.withTopTileDrawn(Tile.Kind.MENHIR);
-                    }
-                    if (predicate.test(tile)) {
-                        break;
-                    }
-                }
-                break;
+    private TileDecks updateDeck(Tile.Kind kind, List<Tile> newDeck) {
+        return switch (kind) {
+            case START -> new TileDecks(newDeck, normalTiles, menhirTiles);
+            case NORMAL -> new TileDecks(startTiles, newDeck, menhirTiles);
+            case MENHIR -> new TileDecks(startTiles, normalTiles, newDeck);
         };
-        return trimmedTileDeck;
     }
 }
